Add serviceRequest table
