# app/main.py
@@ -1,6 +1,6 @@
 # generated by fastapi-codegen:
 #   filename:  smartCity.yaml
-#   timestamp: 2024-04-21T05:45:43+00:00
+#   timestamp: 2024-04-21T21:49:43+00:00
 
 from __future__ import annotations
 
@@ -8,7 +8,14 @@ from typing import List, Union
 
 from fastapi import FastAPI
 
-from models import Camera, Cameraimage, ErrorModel, Iotanalytics, Iotstation
+from models import (
+    Camera,
+    Cameraimage,
+    ErrorModel,
+    Iotanalytics,
+    Iotstation,
+    Servicerequest,
+)
 
 import MySQLdb
 
@@ -21,6 +28,13 @@ db_config = {
 }
 
 conn = MySQLdb.connect(**db_config)
+
+app = FastAPI(
+    version='1.0.0',
+    title='CCTV Cameras',
+    description='API for CCTV Cameras and IOT Stations',
+    contact={'name': 'Sahus Nulu', 'email': 'sahus.nulu@sjsu.edu'},
+)
 
 app = FastAPI(
     version='1.0.0',
@@ -219,6 +233,7 @@ def get_cameraimage_list() -> Union[List[Cameraimage], ErrorModel]:
     pass
 
 
+
 @app.post(
     '/iotanalytics',
     response_model=None,
@@ -339,6 +354,7 @@ def find_iotstation_byid(id: str) -> Union[Iotstation, ErrorModel]:
     return Iotstation(id=item[0], name=item[1], latitude=item[2], longitude=item[3], stationType=item[4])
 
 
+
 @app.delete(
     '/iotstation/{id}',
     response_model=None,
@@ -400,3 +416,88 @@ def get_iotstation_list() -> Union[List[Iotstation], ErrorModel]:
         iotStations.append(iotStation)
 
     return iotStations
+
+
+@app.post(
+    '/servicerequest',
+    response_model=None,
+    responses={
+        '400': {'model': ErrorModel},
+        '401': {'model': ErrorModel},
+        '500': {'model': ErrorModel},
+    },
+)
+def add_servicerequest(body: Servicerequest) -> Union[None, ErrorModel]:
+    """
+    Creates new servicerequest
+    """
+    pass
+
+
+@app.get(
+    '/servicerequest/{id}',
+    response_model=Servicerequest,
+    responses={
+        '400': {'model': ErrorModel},
+        '401': {'model': ErrorModel},
+        '404': {'model': ErrorModel},
+        '500': {'model': ErrorModel},
+    },
+)
+def find_servicerequest_byid(id: str) -> Union[Servicerequest, ErrorModel]:
+    """
+    Returns servicerequest by id
+    """
+    pass
+
+
+@app.delete(
+    '/servicerequest/{id}',
+    response_model=None,
+    responses={
+        '400': {'model': ErrorModel},
+        '401': {'model': ErrorModel},
+        '404': {'model': ErrorModel},
+        '500': {'model': ErrorModel},
+    },
+)
+def delete_servicerequest(id: str) -> Union[None, ErrorModel]:
+    """
+    Deletes servicerequest by id
+    """
+    pass
+
+
+@app.put(
+    '/servicerequest/{id}',
+    response_model=None,
+    responses={
+        '400': {'model': ErrorModel},
+        '401': {'model': ErrorModel},
+        '404': {'model': ErrorModel},
+        '500': {'model': ErrorModel},
+    },
+)
+def update_servicerequest(
+    id: str, body: Servicerequest = ...
+) -> Union[None, ErrorModel]:
+    """
+    Updates servicerequest by id
+    """
+    pass
+
+
+@app.get(
+    '/servicerequests',
+    response_model=List[Servicerequest],
+    responses={
+        '400': {'model': ErrorModel},
+        '401': {'model': ErrorModel},
+        '500': {'model': ErrorModel},
+    },
+)
+def get_servicerequest_list() -> Union[List[Servicerequest], ErrorModel]:
+    """
+    List of servicerequests
+    """
+    pass
