# app/models.py
@@ -1,6 +1,6 @@
 # generated by fastapi-codegen:
 #   filename:  ./openAPI/smartCity.yaml
-#   timestamp: 2024-04-21T05:45:43+00:00
+#   timestamp: 2024-04-21T21:49:43+00:00
 
 from __future__ import annotations
 
@@ -37,7 +37,17 @@ class Iotstation(BaseModel):
 
 class Iotanalytics(BaseModel):
     iotid: constr(min_length=3) = Field(..., example='int')
+    timestamp: constr(min_length=6) = Field(..., example='string')
     totalflow: constr(min_length=5) = Field(..., example='float')
     avgoccupancy: constr(min_length=5) = Field(..., example='float')
     avgspeed: constr(min_length=5) = Field(..., example='float')
     incidents: constr(min_length=3) = Field(..., example='int')
+
+
+class Servicerequest(BaseModel):
+    id: constr(min_length=3) = Field(..., example='int')
+    date: constr(min_length=6) = Field(..., example='string')
+    service: constr(min_length=6) = Field(..., example='string')
+    description: constr(min_length=6) = Field(..., example='string')
+    devicetype: constr(min_length=6) = Field(..., example='string')
+    deviceid: constr(min_length=3) = Field(..., example='int')
